lstm+text preprocc gives max 0.67

--- a/train_fasttext.ipynb
+++ b/train_fasttext.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "0025de88",
    "metadata": {
     "ExecuteTime": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "066858b0",
    "metadata": {
     "ExecuteTime": {
@@ -149,22 +149,22 @@
        "[1030000 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df = pd.read_csv(\"train_supervised_dataset.csv\").fillna(\"\")\n",
-    "uns_train_df = pd.read_csv(\"train_unsupervised_dataset.csv\").fillna(\"\")\n",
-    "test_df = pd.read_csv(\"test_dataset.csv\")\n",
+    "train_df = pd.read_csv(\"data/train_supervised_dataset.csv\").fillna(\"\")\n",
+    "uns_train_df = pd.read_csv(\"data/train_unsupervised_dataset.csv\").fillna(\"\")\n",
+    "test_df = pd.read_csv(\"data/test_dataset.csv\")\n",
     "names = pd.concat((train_df[[\"name\"]], test_df, uns_train_df[[\"name\"]])).reset_index(drop=True)\n",
     "names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "6a84a741",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "c3205a3d",
    "metadata": {
     "scrolled": true
@@ -187,7 +187,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "3c711c25",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "2dddc22e",
    "metadata": {
     "ExecuteTime": {
@@ -367,7 +367,7 @@
        "[1030000 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "32ba0d72",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "[1030000 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "034fb1c5",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "bca4fbe1",
    "metadata": {
     "ExecuteTime": {
@@ -556,19 +556,9 @@
      "start_time": "2023-06-08T10:20:03.668319100Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "FastText(sentences, vector_size=300, window=5, min_count=5, epochs=50).save(\"fasttext.model\")"
+    "FastText(names[\"tokens\"], vector_size=300, window=5, min_count=5).save(\"fasttext_models/fasttext_window.model\")"
    ]
   },
   {
