--- a/train_fasttext.ipynb
+++ b/train_fasttext.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "066858b0",
    "metadata": {
     "ExecuteTime": {
@@ -149,7 +149,7 @@
        "[1030000 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6a84a741",
    "metadata": {},
    "outputs": [],
@@ -174,10 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c3205a3d",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,39 +198,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3c711c25",
+   "execution_count": 5,
+   "id": "ad32086a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "import re\n",
+    "from natasha import (\n",
+    "    Segmenter,\n",
+    "    MorphVocab,\n",
+    "    \n",
+    "    NewsEmbedding,\n",
+    "    NewsMorphTagger,\n",
+    "    NewsSyntaxParser,\n",
+    "    NewsNERTagger,\n",
+    "    \n",
+    "    PER,\n",
+    "    NamesExtractor,\n",
     "\n",
-    "stop_words = set(stopwords.words('russian'))\n",
-    "lemmatizer = WordNetLemmatizer()\n",
-    "\n",
-    "def preprocess_text(text):\n",
-    "    text = re.sub(r'\\b\\d+\\b', '', text)  # remove numbers\n",
-    "    text = re.sub(r'\\s+', ' ', text)  # remove extra spaces\n",
-    "    text = re.sub(r'[^\\w\\s]', '', text)  # remove punctuation\n",
-    "    words = text.lower().split()\n",
-    "    words = [lemmatizer.lemmatize(word) for word in words if word not in stop_words]  # lemmatization and remove stop words\n",
-    "    return words"
+    "    Doc\n",
+    ")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f4f724b9",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b45b8291",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "В качестве предобработки приведем все к нижнему регистру\n",
-    "Токенизируем по пробельным символам"
+    "segmenter = Segmenter()\n",
+    "morph_vocab = MorphVocab()\n",
+    "emb = NewsEmbedding()\n",
+    "morph_tagger = NewsMorphTagger(emb)\n",
+    "syntax_parser = NewsSyntaxParser(emb)\n",
+    "\n",
+    "names_extractor = NamesExtractor(morph_vocab)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e5f3349a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lemmatize(words):\n",
+    "    text = ' '.join(words)\n",
+    "    \n",
+    "    doc = Doc(text)\n",
+    "    doc.segment(segmenter)\n",
+    "    doc.tag_morph(morph_tagger)\n",
+    "    for token in doc.tokens:\n",
+    "        token.lemmatize(morph_vocab)\n",
+    "    \n",
+    "    words = []\n",
+    "    for token in doc.tokens:\n",
+    "        words.append(token.lemma)\n",
+    "    return words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "df74a803",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "from cyrtranslit import to_cyrillic\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    \n",
+    "    text = re.sub('\\d+', '<NUM>', text)  # replace numbers to 0\n",
+    "    text = re.sub(r'\\s+', ' ', text)  # remove extra spaces\n",
+    "    text = re.sub(r'[^\\w\\s]', ' ', text)  # remove punctuation\n",
+    "#     text = text.replace('0', '')\n",
+    "    \n",
+    "    words = []\n",
+    "    for w in text.lower().split():\n",
+    "        if bool(re.search('[a-z]', w)) and bool(re.search('[а-я]', w)):\n",
+    "            words.append(to_cyrillic(w))\n",
+    "        else:\n",
+    "            words.append(w)\n",
+    "#     words = lemmatize(words)\n",
+    "    return words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5ea07941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = names['name'].sample().values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "2dddc22e",
    "metadata": {
     "ExecuteTime": {
@@ -239,6 +306,14 @@
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 8 µs, sys: 20 µs, total: 28 µs\n",
+      "Wall time: 56 µs\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -270,31 +345,31 @@
        "      <th>0</th>\n",
        "      <td>Petmax Бантик леопард с красн розой 2шт</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[petmax, бантик, леопард, красн, розой, 2шт]</td>\n",
+       "      <td>[petmax, бантик, леопард, с, красн, розой, num...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>87191 Бусы для елки шарики_87191</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[бусы, елки, шарики_87191]</td>\n",
+       "      <td>[num, бусы, для, елки, шарики_, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Футболка Piazza Italia WR011446881</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[футболка, piazza, italia, wr011446881]</td>\n",
+       "      <td>[футболка, piazza, italia, wr, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7) YI572-03X-ONE ЗАКОЛКА ДЛЯ ВОЛОС ДЛЯ ДЕВОЧКИ</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[yi57203xone, заколка, волос, девочки]</td>\n",
+       "      <td>[num, yi, num, num, x, one, заколка, для, воло...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Одежда (вес) 1500</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[одежда, вес]</td>\n",
+       "      <td>[одежда, вес, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -306,25 +381,25 @@
        "      <th>1029995</th>\n",
        "      <td>F-2296  Спонж д/макияжа фигурный (шт)</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[f, спонж, дмакияжа, фигурный, шт]</td>\n",
+       "      <td>[f, num, спонж, д, макияжа, фигурный, шт]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029996</th>\n",
        "      <td>4 5702737510597 69.88 Дифф/Arom/1601</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[диффarom]</td>\n",
+       "      <td>[num, num, num, num, дифф, arom, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029997</th>\n",
        "      <td>Матрас надувной 540*74см Tropical Bird запл.д/...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[матрас, надувной, 74см, tropical, bird, заплд...</td>\n",
+       "      <td>[матрас, надувной, num, num, см, tropical, bir...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029998</th>\n",
        "      <td>пододеяльник СТМ Страйп 3-сп, размер: 796х185с...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[пододеяльник, стм, страйп, сп, размер, 796х18...</td>\n",
+       "      <td>[пододеяльник, стм, страйп, num, сп, размер, n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029999</th>\n",
@@ -352,34 +427,67 @@
        "1029999  Пакет ламинированный вертикальный ?Чудесных мг... NaN   \n",
        "\n",
        "                                                    tokens  \n",
-       "0             [petmax, бантик, леопард, красн, розой, 2шт]  \n",
-       "1                               [бусы, елки, шарики_87191]  \n",
-       "2                  [футболка, piazza, italia, wr011446881]  \n",
-       "3                   [yi57203xone, заколка, волос, девочки]  \n",
-       "4                                            [одежда, вес]  \n",
+       "0        [petmax, бантик, леопард, с, красн, розой, num...  \n",
+       "1                     [num, бусы, для, елки, шарики_, num]  \n",
+       "2                      [футболка, piazza, italia, wr, num]  \n",
+       "3        [num, yi, num, num, x, one, заколка, для, воло...  \n",
+       "4                                       [одежда, вес, num]  \n",
        "...                                                    ...  \n",
-       "1029995                 [f, спонж, дмакияжа, фигурный, шт]  \n",
-       "1029996                                         [диффarom]  \n",
-       "1029997  [матрас, надувной, 74см, tropical, bird, заплд...  \n",
-       "1029998  [пододеяльник, стм, страйп, сп, размер, 796х18...  \n",
+       "1029995          [f, num, спонж, д, макияжа, фигурный, шт]  \n",
+       "1029996              [num, num, num, num, дифф, arom, num]  \n",
+       "1029997  [матрас, надувной, num, num, см, tropical, bir...  \n",
+       "1029998  [пододеяльник, стм, страйп, num, сп, размер, n...  \n",
        "1029999  [пакет, ламинированный, вертикальный, чудесных...  \n",
        "\n",
        "[1030000 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "names[\"tokens\"] = names[\"name\"].apply(preprocess_text)\n",
     "names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "id": "230f8c69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# names.to_csv('data/natasha_preprocc_names.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cd1db0b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Petmax Бантик леопард с красн розой 2шт'\n",
+      " '87191 Бусы для елки шарики_87191' 'Футболка Piazza Italia WR011446881'\n",
+      " ... 'Матрас надувной 540*74см Tropical Bird запл.д/ремонта 5 дизайна'\n",
+      " 'пододеяльник СТМ Страйп 3-сп, размер: 796х185см, страйп-сатин, 736% хлопок, 158гр/м1, сиреневый'\n",
+      " 'Пакет ламинированный вертикальный ?Чудесных мгновений!?, 52 ? 44']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(names['name'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "32ba0d72",
    "metadata": {},
    "outputs": [
@@ -414,31 +522,31 @@
        "      <th>0</th>\n",
        "      <td>Petmax Бантик леопард с красн розой 2шт</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[petmax, бантик, леопард, красн, розой, 2шт]</td>\n",
+       "      <td>[petmax, бантик, леопард, с, красн, розой, num...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>87191 Бусы для елки шарики_87191</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[бусы, елки, шарики_87191]</td>\n",
+       "      <td>[num, бусы, для, елки, шарики_, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Футболка Piazza Italia WR011446881</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[футболка, piazza, italia, wr011446881]</td>\n",
+       "      <td>[футболка, piazza, italia, wr, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7) YI572-03X-ONE ЗАКОЛКА ДЛЯ ВОЛОС ДЛЯ ДЕВОЧКИ</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[yi57203xone, заколка, волос, девочки]</td>\n",
+       "      <td>[num, yi, num, num, x, one, заколка, для, воло...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Одежда (вес) 1500</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[одежда, вес]</td>\n",
+       "      <td>[одежда, вес, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -450,25 +558,25 @@
        "      <th>1029995</th>\n",
        "      <td>F-2296  Спонж д/макияжа фигурный (шт)</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[f, спонж, дмакияжа, фигурный, шт]</td>\n",
+       "      <td>[f, num, спонж, д, макияжа, фигурный, шт]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029996</th>\n",
        "      <td>4 5702737510597 69.88 Дифф/Arom/1601</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[диффarom]</td>\n",
+       "      <td>[num, num, num, num, дифф, arom, num]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029997</th>\n",
        "      <td>Матрас надувной 540*74см Tropical Bird запл.д/...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[матрас, надувной, 74см, tropical, bird, заплд...</td>\n",
+       "      <td>[матрас, надувной, num, num, см, tropical, bir...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029998</th>\n",
        "      <td>пододеяльник СТМ Страйп 3-сп, размер: 796х185с...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[пододеяльник, стм, страйп, сп, размер, 796х18...</td>\n",
+       "      <td>[пододеяльник, стм, страйп, num, сп, размер, n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029999</th>\n",
@@ -496,22 +604,22 @@
        "1029999  Пакет ламинированный вертикальный ?Чудесных мг... NaN   \n",
        "\n",
        "                                                    tokens  \n",
-       "0             [petmax, бантик, леопард, красн, розой, 2шт]  \n",
-       "1                               [бусы, елки, шарики_87191]  \n",
-       "2                  [футболка, piazza, italia, wr011446881]  \n",
-       "3                   [yi57203xone, заколка, волос, девочки]  \n",
-       "4                                            [одежда, вес]  \n",
+       "0        [petmax, бантик, леопард, с, красн, розой, num...  \n",
+       "1                     [num, бусы, для, елки, шарики_, num]  \n",
+       "2                      [футболка, piazza, italia, wr, num]  \n",
+       "3        [num, yi, num, num, x, one, заколка, для, воло...  \n",
+       "4                                       [одежда, вес, num]  \n",
        "...                                                    ...  \n",
-       "1029995                 [f, спонж, дмакияжа, фигурный, шт]  \n",
-       "1029996                                         [диффarom]  \n",
-       "1029997  [матрас, надувной, 74см, tropical, bird, заплд...  \n",
-       "1029998  [пододеяльник, стм, страйп, сп, размер, 796х18...  \n",
+       "1029995          [f, num, спонж, д, макияжа, фигурный, шт]  \n",
+       "1029996              [num, num, num, num, дифф, arom, num]  \n",
+       "1029997  [матрас, надувной, num, num, см, tropical, bir...  \n",
+       "1029998  [пододеяльник, стм, страйп, num, сп, размер, n...  \n",
        "1029999  [пакет, ламинированный, вертикальный, чудесных...  \n",
        "\n",
        "[1030000 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "034fb1c5",
    "metadata": {},
    "outputs": [],
@@ -548,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "bca4fbe1",
    "metadata": {
     "ExecuteTime": {
@@ -556,9 +664,19 @@
      "start_time": "2023-06-08T10:20:03.668319100Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 56s, sys: 26.7 s, total: 4min 22s\n",
+      "Wall time: 1min 50s\n"
+     ]
+    }
+   ],
    "source": [
-    "FastText(names[\"tokens\"], vector_size=300, window=5, min_count=5).save(\"fasttext_models/fasttext_window.model\")"
+    "%%time\n",
+    "FastText(names[\"tokens\"], vector_size=128, window=5, min_count=5).save(\"fasttext_models/fasttext_128.model\")"
    ]
   },
   {
