--- a/train_fasttext.ipynb
+++ b/train_fasttext.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0025de88",
    "metadata": {
     "ExecuteTime": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "066858b0",
    "metadata": {
     "ExecuteTime": {
@@ -149,7 +149,7 @@
        "[1030000 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,27 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6a84a741",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brands = train_df[['brand']].values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "c3205a3d",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "db75d116",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['', '1toy', '21 век', ..., 'ячменное поле', 'яшкино', '№1 school'],\n",
-       "      dtype=object)"
+       "               0.03276\n",
+       "брюки          0.01356\n",
+       "пиво           0.01308\n",
+       "вода           0.01232\n",
+       "печенье        0.01164\n",
+       "                ...   \n",
+       "молитвослов    0.00004\n",
+       "медведь        0.00004\n",
+       "супница        0.00004\n",
+       "овчина         0.00004\n",
+       "поддон         0.00004\n",
+       "Name: good, Length: 2820, dtype: float64"
       ]
      },
      "execution_count": 4,
@@ -193,12 +191,44 @@
     }
    ],
    "source": [
-    "np.unique(brands)"
+    "train_df['good'].value_counts(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "f38143c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                        0.34020\n",
+       "яшкино                  0.00480\n",
+       "агуша                   0.00364\n",
+       "коровка из кореновки    0.00272\n",
+       "махеевъ                 0.00252\n",
+       "                         ...   \n",
+       "пласти лаб              0.00004\n",
+       "феррогематоген          0.00004\n",
+       "cbr                     0.00004\n",
+       "helcom                  0.00004\n",
+       "smail                   0.00004\n",
+       "Name: brand, Length: 6976, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['brand'].value_counts(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "ad32086a",
    "metadata": {},
    "outputs": [],
@@ -221,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b45b8291",
    "metadata": {},
    "outputs": [],
@@ -237,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e5f3349a",
    "metadata": {},
    "outputs": [],
@@ -259,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "df74a803",
    "metadata": {},
    "outputs": [],
@@ -270,11 +300,11 @@
     "\n",
     "def preprocess_text(text):\n",
     "    \n",
-    "    text = re.sub('\\d+', '<NUM>', text)  # replace numbers to 0\n",
+    "    text = re.sub('\\d+', '0', text)  # replace numbers to 0/''\n",
+    "    text = re.sub(r'(?<=[a-zа-я])([A-ZА-Я])', r' \\1', text) # сплитим по заглав. букв\n",
+    "    text = re.sub('д/', 'для ', text)\n",
     "    text = re.sub(r'\\s+', ' ', text)  # remove extra spaces\n",
     "    text = re.sub(r'[^\\w\\s]', ' ', text)  # remove punctuation\n",
-    "#     text = text.replace('0', '')\n",
-    "    \n",
     "    words = []\n",
     "    for w in text.lower().split():\n",
     "        if bool(re.search('[a-z]', w)) and bool(re.search('[а-я]', w)):\n",
@@ -287,17 +317,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "5ea07941",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ID180886 Бассейн Intex'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text = names['name'].sample().values[0]"
+    "text = names['name'].sample().values[0]\n",
+    "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
+   "id": "5e08226f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.8 µs ± 486 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "preprocess_text(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "467fa218",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id0', 'бассейн', 'intex']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocess_text(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "2dddc22e",
    "metadata": {
     "ExecuteTime": {
@@ -310,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8 µs, sys: 20 µs, total: 28 µs\n",
-      "Wall time: 56 µs\n"
+      "CPU times: user 22 s, sys: 648 ms, total: 22.6 s\n",
+      "Wall time: 22.6 s\n"
      ]
     },
     {
@@ -345,31 +427,31 @@
        "      <th>0</th>\n",
        "      <td>Petmax Бантик леопард с красн розой 2шт</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[petmax, бантик, леопард, с, красн, розой, num...</td>\n",
+       "      <td>[petmax, бантик, леопард, с, красн, розой, 0шт]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>87191 Бусы для елки шарики_87191</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[num, бусы, для, елки, шарики_, num]</td>\n",
+       "      <td>[0, бусы, для, елки, шарики_0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Футболка Piazza Italia WR011446881</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[футболка, piazza, italia, wr, num]</td>\n",
+       "      <td>[футболка, piazza, italia, wr0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7) YI572-03X-ONE ЗАКОЛКА ДЛЯ ВОЛОС ДЛЯ ДЕВОЧКИ</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[num, yi, num, num, x, one, заколка, для, воло...</td>\n",
+       "      <td>[0, yi0, 0x, one, заколка, для, волос, для, де...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Одежда (вес) 1500</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[одежда, вес, num]</td>\n",
+       "      <td>[одежда, вес, 0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -381,25 +463,25 @@
        "      <th>1029995</th>\n",
        "      <td>F-2296  Спонж д/макияжа фигурный (шт)</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[f, num, спонж, д, макияжа, фигурный, шт]</td>\n",
+       "      <td>[f, 0, спонж, для, макияжа, фигурный, шт]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029996</th>\n",
        "      <td>4 5702737510597 69.88 Дифф/Arom/1601</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[num, num, num, num, дифф, arom, num]</td>\n",
+       "      <td>[0, 0, 0, 0, дифф, arom, 0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029997</th>\n",
        "      <td>Матрас надувной 540*74см Tropical Bird запл.д/...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[матрас, надувной, num, num, см, tropical, bir...</td>\n",
+       "      <td>[матрас, надувной, 0, 0см, tropical, bird, зап...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029998</th>\n",
        "      <td>пододеяльник СТМ Страйп 3-сп, размер: 796х185с...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[пододеяльник, стм, страйп, num, сп, размер, n...</td>\n",
+       "      <td>[пододеяльник, стм, страйп, 0, сп, размер, 0х0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1029999</th>\n",
@@ -427,22 +509,22 @@
        "1029999  Пакет ламинированный вертикальный ?Чудесных мг... NaN   \n",
        "\n",
        "                                                    tokens  \n",
-       "0        [petmax, бантик, леопард, с, красн, розой, num...  \n",
-       "1                     [num, бусы, для, елки, шарики_, num]  \n",
-       "2                      [футболка, piazza, italia, wr, num]  \n",
-       "3        [num, yi, num, num, x, one, заколка, для, воло...  \n",
-       "4                                       [одежда, вес, num]  \n",
+       "0          [petmax, бантик, леопард, с, красн, розой, 0шт]  \n",
+       "1                           [0, бусы, для, елки, шарики_0]  \n",
+       "2                          [футболка, piazza, italia, wr0]  \n",
+       "3        [0, yi0, 0x, one, заколка, для, волос, для, де...  \n",
+       "4                                         [одежда, вес, 0]  \n",
        "...                                                    ...  \n",
-       "1029995          [f, num, спонж, д, макияжа, фигурный, шт]  \n",
-       "1029996              [num, num, num, num, дифф, arom, num]  \n",
-       "1029997  [матрас, надувной, num, num, см, tropical, bir...  \n",
-       "1029998  [пододеяльник, стм, страйп, num, сп, размер, n...  \n",
+       "1029995          [f, 0, спонж, для, макияжа, фигурный, шт]  \n",
+       "1029996                        [0, 0, 0, 0, дифф, arom, 0]  \n",
+       "1029997  [матрас, надувной, 0, 0см, tropical, bird, зап...  \n",
+       "1029998  [пододеяльник, стм, страйп, 0, сп, размер, 0х0...  \n",
        "1029999  [пакет, ламинированный, вертикальный, чудесных...  \n",
        "\n",
        "[1030000 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,195 +537,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "230f8c69",
    "metadata": {},
    "outputs": [],
    "source": [
     "# names.to_csv('data/natasha_preprocc_names.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "cd1db0b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Petmax Бантик леопард с красн розой 2шт'\n",
-      " '87191 Бусы для елки шарики_87191' 'Футболка Piazza Italia WR011446881'\n",
-      " ... 'Матрас надувной 540*74см Tropical Bird запл.д/ремонта 5 дизайна'\n",
-      " 'пододеяльник СТМ Страйп 3-сп, размер: 796х185см, страйп-сатин, 736% хлопок, 158гр/м1, сиреневый'\n",
-      " 'Пакет ламинированный вертикальный ?Чудесных мгновений!?, 52 ? 44']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(names['name'].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "32ba0d72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>id</th>\n",
-       "      <th>tokens</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Petmax Бантик леопард с красн розой 2шт</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[petmax, бантик, леопард, с, красн, розой, num...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>87191 Бусы для елки шарики_87191</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[num, бусы, для, елки, шарики_, num]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Футболка Piazza Italia WR011446881</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[футболка, piazza, italia, wr, num]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7) YI572-03X-ONE ЗАКОЛКА ДЛЯ ВОЛОС ДЛЯ ДЕВОЧКИ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[num, yi, num, num, x, one, заколка, для, воло...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Одежда (вес) 1500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[одежда, вес, num]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1029995</th>\n",
-       "      <td>F-2296  Спонж д/макияжа фигурный (шт)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[f, num, спонж, д, макияжа, фигурный, шт]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1029996</th>\n",
-       "      <td>4 5702737510597 69.88 Дифф/Arom/1601</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[num, num, num, num, дифф, arom, num]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1029997</th>\n",
-       "      <td>Матрас надувной 540*74см Tropical Bird запл.д/...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[матрас, надувной, num, num, см, tropical, bir...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1029998</th>\n",
-       "      <td>пододеяльник СТМ Страйп 3-сп, размер: 796х185с...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[пододеяльник, стм, страйп, num, сп, размер, n...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1029999</th>\n",
-       "      <td>Пакет ламинированный вертикальный ?Чудесных мг...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[пакет, ламинированный, вертикальный, чудесных...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1030000 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                      name  id  \\\n",
-       "0                  Petmax Бантик леопард с красн розой 2шт NaN   \n",
-       "1                         87191 Бусы для елки шарики_87191 NaN   \n",
-       "2                       Футболка Piazza Italia WR011446881 NaN   \n",
-       "3           7) YI572-03X-ONE ЗАКОЛКА ДЛЯ ВОЛОС ДЛЯ ДЕВОЧКИ NaN   \n",
-       "4                                        Одежда (вес) 1500 NaN   \n",
-       "...                                                    ...  ..   \n",
-       "1029995              F-2296  Спонж д/макияжа фигурный (шт) NaN   \n",
-       "1029996               4 5702737510597 69.88 Дифф/Arom/1601 NaN   \n",
-       "1029997  Матрас надувной 540*74см Tropical Bird запл.д/... NaN   \n",
-       "1029998  пододеяльник СТМ Страйп 3-сп, размер: 796х185с... NaN   \n",
-       "1029999  Пакет ламинированный вертикальный ?Чудесных мг... NaN   \n",
-       "\n",
-       "                                                    tokens  \n",
-       "0        [petmax, бантик, леопард, с, красн, розой, num...  \n",
-       "1                     [num, бусы, для, елки, шарики_, num]  \n",
-       "2                      [футболка, piazza, italia, wr, num]  \n",
-       "3        [num, yi, num, num, x, one, заколка, для, воло...  \n",
-       "4                                       [одежда, вес, num]  \n",
-       "...                                                    ...  \n",
-       "1029995          [f, num, спонж, д, макияжа, фигурный, шт]  \n",
-       "1029996              [num, num, num, num, дифф, arom, num]  \n",
-       "1029997  [матрас, надувной, num, num, см, tropical, bir...  \n",
-       "1029998  [пододеяльник, стм, страйп, num, сп, размер, n...  \n",
-       "1029999  [пакет, ламинированный, вертикальный, чудесных...  \n",
-       "\n",
-       "[1030000 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "034fb1c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SentenceGenerator(object):\n",
-    "    def __init__(self, dataframe):\n",
-    "        self.dataframe = dataframe\n",
-    "\n",
-    "    def __iter__(self):\n",
-    "        for index, row in self.dataframe.iterrows():\n",
-    "            yield row['tokens']\n",
-    "\n",
-    "sentences = SentenceGenerator(names)"
    ]
   },
   {
@@ -656,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "bca4fbe1",
    "metadata": {
     "ExecuteTime": {
@@ -669,14 +568,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 56s, sys: 26.7 s, total: 4min 22s\n",
-      "Wall time: 1min 50s\n"
+      "CPU times: user 3min 27s, sys: 4.06 s, total: 3min 31s\n",
+      "Wall time: 1min 19s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "FastText(names[\"tokens\"], vector_size=128, window=5, min_count=5).save(\"fasttext_models/fasttext_128.model\")"
+    "FastText(names[\"tokens\"], vector_size=128, window=5, min_count=5).save(\"fasttext_models/fasttext_128_cap_split.model\")"
    ]
   },
   {
